@@ -1,3 +1,4 @@
+	* fix python binding for settings_pack conversion
 	* fix DHT announce timer issue
 	* use DSCP_TRAFFIC_TYPE socket option on windows
 	* update default ToS setting according to RFC 8622
